--- a/sass/subpages/_checkout.scss
+++ b/sass/subpages/_checkout.scss
@@ -242,11 +242,25 @@ body.woocommerce-checkout{
                         padding: 0;
                         margin: 0;
 
-                        li.payment_method_payu{
+                        li{
+                            margin-bottom: 15px;
+
+                            &:last-of-type{
+                                margin-bottom: 0;
+                            }
+
+                            input{
+                                float: left;
+                                height: 35px;
+                                margin-right: 10px;
+                                cursor: pointer;
+                            }
                             label{
                                 display: flex;
                                 align-items: center;
                                 font-size: 14px;
+                                height: 35px;
+                                cursor: pointer;
 
                                 img{
                                     max-width: 70px;
@@ -255,7 +269,7 @@ body.woocommerce-checkout{
                                     margin-left: 10px;
                                 }
                             }
-                            div.payment_method_payu{
+                            .payment_box{
                                 background-color: #efefef;
                                 padding: 12px;
                                 
