--- a/css/custom.css
+++ b/css/custom.css
@@ -5220,7 +5220,7 @@ body.woocommerce-account .entry-header {
       -ms-flex-align: center;
           align-items: center;
   height: 100%;
-  max-height: 750px;
+  min-height: 750px;
   margin: 0;
   background-color: #f7f6f4;
 }
@@ -5254,6 +5254,14 @@ body.woocommerce-account .entry-header {
   text-align: center;
 }
 
+.pageProducts .productsInfo__section .content .text ul {
+  font-size: 14px;
+  line-height: 21px;
+  padding: 0;
+  margin: 0 auto 45px;
+  max-width: 720px;
+}
+
 .pageProducts .productsInfo__section .content .btn {
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
@@ -5264,13 +5272,14 @@ body.woocommerce-account .entry-header {
 .pageProducts .productsInfo__section .image {
   width: 50%;
   height: 100%;
-  max-height: inherit;
+  min-height: inherit;
 }
 
 .pageProducts .productsInfo__section .image img {
+  display: block;
   width: 100%;
   height: 100%;
-  max-height: inherit;
+  min-height: inherit;
   -o-object-fit: cover;
      object-fit: cover;
 }
