--- a/sass/subpages/_products.scss
+++ b/sass/subpages/_products.scss
@@ -48,7 +48,7 @@
             display: flex;
             align-items: center;
             height: 100%;
-            max-height: 750px;
+            min-height: 750px;
             margin: 0;
             background-color: #f7f6f4;
 
@@ -77,6 +77,13 @@
                         margin: 0 auto 45px;
                         text-align: center;
                     }
+                    ul{
+                        font-size: 14px;
+                        line-height: 21px;
+                        padding: 0;
+                        margin: 0 auto 45px;
+                        max-width: 720px;
+                    }
                 }
                 .btn{
                     max-width: fit-content;
@@ -86,12 +93,13 @@
             .image{
                 width: 50%;
                 height: 100%;
-                max-height: inherit;
+                min-height: inherit;
 
                 img{
+                    display: block;
                     width: 100%;
                     height: 100%;
-                    max-height: inherit;
+                    min-height: inherit;
                     object-fit: cover;
                 }
             }
