--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -26,7 +26,8 @@
     }
 }
 body.postid-17250,
-body.postid-20294{
+body.postid-20294,
+body.postid-21695{
     .productPage{
         &__content{
             .free-shipping{
