--- a/sass/subpages/_products.scss
+++ b/sass/subpages/_products.scss
@@ -3,6 +3,9 @@
         display: flex;
         align-items: center;
         height: 60vh;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: right bottom;
 
         &__content{
             width: 50%;
@@ -34,6 +37,7 @@
             height: inherit;
 
             img{
+                display: none;
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
@@ -42,7 +46,7 @@
         }
     }
     .productsInfo{
-        margin: 100px auto;
+        margin: 0 auto 100px;
         
         &__section{
             display: flex;
@@ -106,6 +110,15 @@
         }
     }
 }
+@media (max-width: 1500px){
+    .pageProducts{
+        .productsHeader{
+            &__content{
+                width: 40%;
+            }
+        }
+    }
+}
 @media (max-width: 1199px){
     .pageProducts{
         .productsHeader{
@@ -134,6 +147,7 @@
         .productsHeader{
             flex-direction: column-reverse;
             height: auto;
+            background-image: unset !important;
 
             &__image{
                 width: 100%;
@@ -152,6 +166,10 @@
                     position: absolute;
                     bottom: 0;
                     left: 0;
+                }
+
+                img{
+                    display: block;
                 }
             }
             &__content{
