--- a/css/custom.css
+++ b/css/custom.css
@@ -5180,6 +5180,7 @@ body.woocommerce-account .entry-header {
       -ms-flex-align: center;
           align-items: center;
   height: 60vh;
+  max-height: 550px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: right bottom;
