--- a/sass/subpages/_products.scss
+++ b/sass/subpages/_products.scss
@@ -3,6 +3,7 @@
         display: flex;
         align-items: center;
         height: 60vh;
+        max-height: 550px;
         background-size: contain;
         background-repeat: no-repeat;
         background-position: right bottom;
