color of buttons

--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -1,4 +1,6 @@
-.product_tag-isotonic{
+.product_tag-isotonic,
+.product_tag-isotonic-en,
+.product_tag-isotonic-de{
     .productPage{
         &__content{
             .free-shipping{
