Our product ul padding

--- a/css/custom.css
+++ b/css/custom.css
@@ -5313,8 +5313,9 @@ body.woocommerce-account .entry-header {
   font-size: 14px;
   line-height: 21px;
   padding: 0;
+  padding-left: 15px;
   margin: 0 auto 45px;
-  max-width: 720px;
+  max-width: 760px;
 }
 
 .pageProducts .productsInfo__section .content .btn {
