--- a/sass/subpages/_products.scss
+++ b/sass/subpages/_products.scss
@@ -86,8 +86,9 @@
                         font-size: 14px;
                         line-height: 21px;
                         padding: 0;
+                        padding-left: 15px;
                         margin: 0 auto 45px;
-                        max-width: 720px;
+                        max-width: 760px;
                     }
                 }
                 .btn{
