water bottle - en fix

--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -56,6 +56,7 @@ body.postid-21695{
         }
     }
 }
+.product.product_tag-supersonic-shaker,
 .product.product_tag-shaker{
     .productPage{
         &__content{
