--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -57,6 +57,7 @@ body.postid-21695{
     }
 }
 .product.product_tag-supersonic-shaker,
+.product.product_tag-shaker-de,
 .product.product_tag-shaker{
     .productPage{
         &__content{
