cart update coupon

--- a/css/custom.css
+++ b/css/custom.css
@@ -2762,8 +2762,8 @@ body.woocommerce-cart .entry-content {
 .ssCart table.cart td.actions .coupon-actions .coupon .coupon-trigger span:after {
   position: absolute;
   content: '';
-  top: 5px;
-  right: -20px;
+  top: 0;
+  right: -25px;
   background-image: url("../images/icons/down-chevron.svg");
   background-repeat: no-repeat;
   width: 15px;
