--- a/sass/sections/_homeHeader.scss
+++ b/sass/sections/_homeHeader.scss
@@ -99,9 +99,7 @@
 }
 @media (max-width: 767px){
     .homeHeader{
-
         &__content{
-
             h2{
                 font-size: 24px;
                 line-height: 32px;
@@ -123,6 +121,7 @@
     .homeHeader{
         &__content{
             max-width: 320px;
+            margin: 0 auto;
         }
     }
 }
