product page - expert section margin

--- a/sass/sections/_productExpert.scss
+++ b/sass/sections/_productExpert.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     height: 700px;
+    margin: 0 0 100px;
 
     &__content{
         display: flex;
