--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -678,7 +678,7 @@ body.postid-21695{
 }
 
 .productNutritional{
-    padding: 150px 0;
+    padding: 50px 0 150px;
 
     &__heading{
         max-width: 500px;
