--- a/css/custom.css
+++ b/css/custom.css
@@ -638,6 +638,148 @@ body.postid-21695 .productComponents #openModal:hover {
   }
 }
 
+.productTesVid {
+  padding: 100px 0 0;
+}
+
+.productTesVid__content {
+  margin: 0 0 50px;
+}
+
+.productTesVid__content h2 {
+  font-size: 28px;
+  line-height: 36px;
+  font-weight: 400;
+  text-align: center;
+  margin: 0 0 20px;
+}
+
+.productTesVid__content p {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 300;
+  max-width: 700px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.productTesVid__list {
+  display: flex;
+  justify-content: space-between;
+  max-width: fit-content;
+  margin: 0 auto;
+}
+
+.productTesVid__video {
+  margin: 0 20px;
+}
+
+.productTesVid__video:first-of-type {
+  margin-left: 0;
+}
+
+.productTesVid__video:last-of-type {
+  margin-right: 0;
+}
+
+.productTesVid__video .thumb {
+  width: 204px;
+  height: 204px;
+  border-radius: 100%;
+  overflow: hidden;
+  border: 2px solid #44c680;
+  box-shadow: 0 0 30px #44c6805e;
+  margin: 0 auto 20px;
+  position: relative;
+  cursor: pointer;
+}
+
+.productTesVid__video .thumb:hover:after {
+  opacity: 1;
+}
+
+.productTesVid__video .thumb:hover img {
+  opacity: .5;
+}
+
+.productTesVid__video .thumb:after {
+  content: '';
+  width: 0;
+  height: 0;
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+  border-left: 50px solid #fff;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50%;
+  transform: translate(0, -50%);
+  margin: 0 auto;
+  opacity: 0;
+  transition: ease .3s;
+}
+
+.productTesVid__video .thumb img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: ease .3s;
+}
+
+.productTesVid__video p {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 500;
+  color: #000;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+@media (max-width: 1199px) {
+  .productTesVid__video .thumb {
+    width: 170px;
+    height: 170px;
+  }
+}
+
+@media (max-width: 991px) {
+  .productTesVid__list {
+    flex-wrap: wrap;
+    max-width: 400px;
+  }
+  .productTesVid__video {
+    width: calc(100% / 2);
+    margin: 0 0 30px;
+  }
+}
+
+@media (max-width: 500px) {
+  .productTesVid {
+    overflow: hidden;
+    padding: 100px 0 20px;
+  }
+  .productTesVid__content {
+    margin: 0 0 25px;
+  }
+  .productTesVid__list .slick-list {
+    overflow: visible;
+  }
+  .productTesVid__video {
+    width: 190px;
+    margin: 0;
+    padding-top: 20px;
+    opacity: .4;
+    transition: ease .3s;
+  }
+  .productTesVid__video.slick-current {
+    opacity: 1;
+  }
+  .productTesVid__video .thumb {
+    margin: 0 auto 15px;
+  }
+}
+
 .productComponents {
   padding: 150px 0 25px;
 }
