--- a/sass/subpages/_blog.scss
+++ b/sass/subpages/_blog.scss
@@ -492,6 +492,23 @@ body.single-post{
             }
         }
     }
+    .postProducts{
+        text-align: center;
+        margin: 30px 0 45px;
+
+        h3{
+            font-size: 21px;
+            line-height: 26px;
+            font-weight: 500;
+            color: #000;
+            text-align: center;
+            margin: 0 0 20px;
+        }
+        a{
+            max-width: fit-content;
+            margin: 0 auto;
+        }
+    }
     .postFooter{
         display: flex;
         flex-direction: row;
