--- a/sass/sections/_logosList.scss
+++ b/sass/sections/_logosList.scss
@@ -1,16 +1,21 @@
 .logosList{
-    padding: 60px 0;
-    margin-bottom: 40px;
-    border-bottom: 1px solid #C8C8C8;
+    padding: 25px 0;
+    background-color: #f7f6f4;
 
-    h2{
-        margin: 0 0 50px
-    }
     &__list{
         display: flex;
+        justify-content: center;
     }
     &__logo{
+        width: fit-content;
         text-align: center;
+        max-height: 150px;
+
+        img{
+            object-fit: contain;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
 @media (max-width: 1199px){
