--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -514,6 +514,7 @@ body.postid-21695{
             line-height: 36px;
             font-weight: 400;
             margin: 0;
+            padding: 0 20px;
             text-align: center;
         }
     }
@@ -615,7 +616,7 @@ body.postid-21695{
         margin: 0 auto;
     }
     &__video{
-        margin: 0 20px;
+        margin: 0 40px;
 
         &:first-of-type{
             margin-left: 0;
