--- a/sass/sections/_logosList.scss
+++ b/sass/sections/_logosList.scss
@@ -9,7 +9,8 @@
     &__logo{
         width: fit-content;
         text-align: center;
-        max-height: 150px;
+        max-height: 40px;
+        opacity: .7;
 
         img{
             object-fit: contain;
@@ -30,13 +31,15 @@
 @media (max-width: 768px){
     .logosList{
         &__list{
-            flex-direction: column;
+            flex-direction: row;
+            flex-wrap: wrap;
             align-items: center;
         }
         &__logo{
             width: 100% !important;
-            max-width: 230px;
-            height: 120px;
+            max-width: 160px;
+            height: 40px;
+            margin: 10px;
 
             img{
                 max-width: 100%;
