"Napisali o nas" - bg change

--- a/css/custom.css
+++ b/css/custom.css
@@ -5490,7 +5490,7 @@ body.woocommerce-account .entry-header {
 
 .logosList {
   padding: 25px 0;
-  background-color: #f7f6f4;
+  background-color: #fff;
 }
 
 .logosList__list {
