--- a/sass/sections/_logosList.scss
+++ b/sass/sections/_logosList.scss
@@ -1,6 +1,6 @@
 .logosList{
     padding: 25px 0;
-    background-color: #f7f6f4;
+    background-color: #fff;
 
     &__list{
         display: flex;
