--- a/sass/sections/_logosList.scss
+++ b/sass/sections/_logosList.scss
@@ -36,7 +36,7 @@
             align-items: center;
         }
         &__logo{
-            width: 100% !important;
+            width: 100%;
             max-width: 160px;
             height: 40px;
             margin: 10px;
@@ -45,6 +45,23 @@
                 max-width: 100%;
                 max-height: 100%;
                 object-fit: contain;
+            }
+        }
+    }
+}
+@media (max-width: 500px){
+    .logosList{
+        &__list{
+            padding: 0 !important;
+        }
+        &__logo{
+            max-width: 200px;
+            max-height: 50px;
+            padding: 0 20px;
+            margin: 0;
+
+            img{
+                max-height: 50px;
             }
         }
     }
