--- a/sass/subpages/_checkout.scss
+++ b/sass/subpages/_checkout.scss
@@ -31,6 +31,10 @@ body.woocommerce-checkout{
         display: flex;
         flex-direction: row;
 
+        .woocommerce-NoticeGroup-updateOrderReview{
+            display: none !important;
+        }
+
         .woocommerce-error{
             position: relative;
             padding: 10px 20px 10px 35px !important;
