--- a/css/custom.css
+++ b/css/custom.css
@@ -802,6 +802,38 @@ body.postid-21695 .productComponents #openModal:hover {
   margin: 0;
 }
 
+.testiModal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: #0000007a;
+  width: 100%;
+  height: 100%;
+  z-index: 90;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: ease .3s;
+}
+
+.testiModal__wrap {
+  opacity: 0;
+  pointer-events: none;
+  transition: ease .3s;
+}
+
+.testiModal--ready {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.testiModal--active .testiModal__wrap {
+  opacity: 1;
+  pointer-events: all;
+}
+
 @media (max-width: 1199px) {
   .productTesVid__video .thumb {
     width: 170px;
