--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -747,6 +747,38 @@ body.postid-21695{
         }
     }
 }
+.testiModal{
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: #0000007a;
+    width: 100%;
+    height: 100%;
+    z-index: 90;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: ease .3s;
+
+    &__wrap{
+        opacity: 0;
+        pointer-events: none;
+        transition: ease .3s;
+    }
+
+    &--ready{
+        opacity: 0;
+        pointer-events: none;
+    }
+    &--active{
+        .testiModal__wrap{
+            opacity: 1;
+            pointer-events: all;
+        }
+    }
+}
 @media (max-width: 1199px){
     .productTesVid{
         &__video{
