--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -769,8 +769,8 @@ body.postid-21695{
     }
 
     &--ready{
-        opacity: 0;
-        pointer-events: none;
+        opacity: 1;
+        pointer-events: all;
     }
     &--active{
         .testiModal__wrap{
