Menu + shop subpage - to editors

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -17,6 +17,7 @@
 @import 'subpages/shipping';
 @import 'subpages/tribe';
 @import 'subpages/products';
+@import 'subpages/pageShop';
 
 /*  Sections
 -----------------*/
