--- a/sass/parts/_siteHeader.scss
+++ b/sass/parts/_siteHeader.scss
@@ -249,14 +249,14 @@ body{
 }
 
 .menuDropdown{
-    background-color: #fff;
+    background-color: #f5f5f5;
     width: 100%;
-    padding: 50px 0 30px;
+    padding: 50px 0 0;
     box-shadow: 0 1px 4px #00000014;
     position: fixed;
-    top: -250px;
+    top: -386px;
     z-index: 2;
-    transition: ease .3s;
+    transition: ease .6s;
 
     &.toggle{
         top: 48px;
@@ -265,36 +265,100 @@ body{
     &__list{
         display: flex;
         max-width: fit-content;
-        margin: 0 auto;
+        margin: 0 auto 30px;
     }
     &__product{
         display: flex;
         flex-direction: column;
-        max-width: 135px;
-        margin: 0 16px;
+        max-width: 190px;
+        margin: 0 6px;
+        border-radius: 5px;
+        overflow: hidden;
         text-align: center;
-        transition: ease .3;
+        transition: ease .3s;
 
         &:hover{
-            opacity: .8;
+            box-shadow: 0 0 15px #0000002e;
         }
 
-        img{
-            max-width: 135px;
-            max-height: 135px;
+        .thumb{
             width: 100%;
-            height: 100%;
-            object-fit: cover;
-            margin-bottom: 15px;
+            height: 200px;
+
+            img{
+                max-width: 100%;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
         p{
             font-size: 14px;
             font-weight: 400;
             margin: 0;
             color: #000;
+            padding: 10px;
+            background-color: #fff;
+            min-height: 62px;
+        }
+    }
+    &__more{
+        background-color: #fff;
+        width: 100%;
+        text-align: center;
+        box-shadow: 0 0px 10px 0px #00000021;
+
+        a{
+            display: block;
+            width: 100%;
+            padding: 14px 0;
+            font-size: 14px;
+            line-height: 16px;
+            font-weight: 600;
+            color: #000;
+            text-align: center;
+            margin: 0;
+            transition: ease .3s;
+            position: relative;
+
+            &:before{
+                content: '';
+                background-color: #44c680;
+                position: absolute;
+                left: -100%;
+                width: 100%;
+                height: 44px;
+                top: 0;
+                transition: ease .3s;
+                z-index: -1;
+            }
+
+            &:hover{
+                color: #fff;
+                opacity: .7;
+
+                &:before{
+                    left: 0;
+                }
+            }
         }
     }
 }
+@media (max-width: 1700px){
+    .menuDropdown{
+        &__product{
+            max-width: 150px;
+
+            .thumb{
+                height: 160px;
+            }
+            p{
+                min-height: 85px;
+            }
+        }
+    }
+}
+
 body.admin-bar{
     .menuDropdown{
         &.toggle{
