--- a/css/custom.css
+++ b/css/custom.css
@@ -4941,7 +4941,7 @@ body.woocommerce-account .entry-header {
 .pageProducts .productsHeader {
   display: flex;
   align-items: center;
-  height: 60vh;
+  min-height: 60vh;
   max-height: 550px;
   background-size: contain;
   background-repeat: no-repeat;
@@ -5147,7 +5147,7 @@ body.woocommerce-account .entry-header {
 
 .shopPage {
   background-color: #f5f5f5;
-  padding: 0 0 50px;
+  padding: 0 0 20px;
 }
 
 .shopHeading {
@@ -5189,10 +5189,24 @@ body.woocommerce-account .entry-header {
   }
 }
 
+.shopProducts__heading {
+  max-width: 1410px;
+  margin: 0 auto 30px;
+}
+
+.shopProducts__heading h2 {
+  font-size: 32px;
+  line-height: 42px;
+  text-align: left;
+  margin: 0;
+  color: #000;
+}
+
 .shopProducts__wrap {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin: 0 0 30px;
 }
 
 .productTile {
@@ -6293,7 +6307,7 @@ body.admin-bar .siteHeader--float {
 }
 
 .menuDropdown {
-  background-color: #f5f5f5;
+  background-color: #fff;
   width: 100%;
   padding: 50px 0 0;
   box-shadow: 0 1px 4px #00000014;
@@ -6318,14 +6332,13 @@ body.admin-bar .siteHeader--float {
   flex-direction: column;
   max-width: 190px;
   margin: 0 6px;
-  border-radius: 5px;
   overflow: hidden;
   text-align: center;
   transition: ease .3s;
 }
 
 .menuDropdown__product:hover {
-  box-shadow: 0 0 15px #0000002e;
+  opacity: .7;
 }
 
 .menuDropdown__product .thumb {
