--- a/sass/parts/_siteHeader.scss
+++ b/sass/parts/_siteHeader.scss
@@ -249,7 +249,7 @@ body{
 }
 
 .menuDropdown{
-    background-color: #f5f5f5;
+    background-color: #fff;
     width: 100%;
     padding: 50px 0 0;
     box-shadow: 0 1px 4px #00000014;
@@ -272,13 +272,12 @@ body{
         flex-direction: column;
         max-width: 190px;
         margin: 0 6px;
-        border-radius: 5px;
         overflow: hidden;
         text-align: center;
         transition: ease .3s;
 
         &:hover{
-            box-shadow: 0 0 15px #0000002e;
+            opacity: .7;
         }
 
         .thumb{
