--- a/sass/subpages/_pageShop.scss
+++ b/sass/subpages/_pageShop.scss
@@ -1,6 +1,6 @@
 .shopPage{
     background-color: #f5f5f5;
-    padding: 0 0 50px;
+    padding: 0 0 20px;
 }
 
 .shopHeading{
@@ -46,10 +46,23 @@
 }
 
 .shopProducts{
+    &__heading{
+        max-width: 1410px;
+        margin: 0 auto 30px;
+
+        h2{
+            font-size: 32px;
+            line-height: 42px;
+            text-align: left;
+            margin: 0;
+            color: #000;
+        }
+    }
     &__wrap{
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
+        margin: 0 0 30px;
     }
 }
 
