--- a/sass/subpages/_products.scss
+++ b/sass/subpages/_products.scss
@@ -2,7 +2,7 @@
     .productsHeader{
         display: flex;
         align-items: center;
-        height: 60vh;
+        min-height: 60vh;
         max-height: 550px;
         background-size: contain;
         background-repeat: no-repeat;
