--- a/css/custom.css
+++ b/css/custom.css
@@ -5184,7 +5184,6 @@ body.woocommerce-account .entry-header {
 }
 
 .shopPage {
-  background-color: #f5f5f5;
   padding: 0 0 20px;
 }
 
@@ -5258,10 +5257,6 @@ body.woocommerce-account .entry-header {
   transition: ease .3s;
 }
 
-.productTile--powder .productTile__thumb {
-  background-color: #c6e1d1;
-}
-
 .productTile:hover {
   box-shadow: 0 0 15px #00000026;
 }
@@ -5295,7 +5290,20 @@ body.woocommerce-account .entry-header {
   font-size: 14px;
   line-height: 18px;
   margin: 0 0 9px;
-  text-align: center;
+  text-align: left;
+  position: relative;
+  padding-left: 12px;
+}
+
+.productTile .content__usp .pos:before {
+  content: '';
+  width: 4px;
+  height: 4px;
+  background-color: #000;
+  position: absolute;
+  left: 0;
+  top: 7px;
+  border-radius: 100%;
 }
 
 .productTile .content__usp .pos:last-of-type {
