--- a/sass/subpages/_pageShop.scss
+++ b/sass/subpages/_pageShop.scss
@@ -1,5 +1,4 @@
 .shopPage{
-    background-color: #f5f5f5;
     padding: 0 0 20px;
 }
 
@@ -76,11 +75,6 @@
     cursor: pointer;
     transition: ease .3s;
 
-    &--powder{
-        .productTile__thumb{
-            background-color: #c6e1d1;
-        }
-    }
     &:hover{
         box-shadow: 0 0 15px #00000026;
     }
@@ -112,7 +106,20 @@
                 font-size: 14px;
                 line-height: 18px;
                 margin: 0 0 9px;
-                text-align: center;
+                text-align: left;
+                position: relative;
+                padding-left: 12px;
+
+                &:before{
+                    content: '';
+                    width: 4px;
+                    height: 4px;
+                    background-color: #000;
+                    position: absolute;
+                    left: 0;
+                    top: 7px;
+                    border-radius: 100%;
+                }
 
                 &:last-of-type{
                     margin: 0;
